--- a/frontend/register.html
+++ b/frontend/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Luxury Hotel</title>
+    <title>Register - Luxury Hotel</title>
     <link rel="stylesheet" href="css/style.css">
     <style>
         .auth-container {
@@ -22,7 +22,7 @@
             margin-bottom: 0.5rem;
             font-weight: bold;
         }
-        .form-group input {
+        .form-group input, .form-group select {
             width: 100%;
             padding: 10px;
             border: 1px solid #ddd;
@@ -47,28 +47,39 @@
             </div>
             <nav class="nav">
                 <a href="index.html">Home</a>
-                <a href="register.html">Register</a>
+                <a href="login.html">Login</a>
             </nav>
         </div>
     </header>
 
     <main class="container">
         <div class="auth-container">
-            <h2>Login to Your Account</h2>
+            <h2>Create Account</h2>
             <div id="message"></div>
-            <form id="loginForm">
+            <form id="registerForm">
+                <div class="form-group">
+                    <label>Full Name</label>
+                    <input type="text" id="name" required>
+                </div>
                 <div class="form-group">
                     <label>Email</label>
                     <input type="email" id="email" required>
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    <input type="password" id="password" required>
+                    <input type="password" id="password" required minlength="6">
                 </div>
-                <button type="submit" class="btn btn-primary" style="width: 100%;">Login</button>
+                <div class="form-group">
+                    <label>Role</label>
+                    <select id="role">
+                        <option value="user">User</option>
+                        <option value="admin">Admin</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary" style="width: 100%;">Register</button>
             </form>
             <p style="text-align: center; margin-top: 1rem;">
-                Don't have an account? <a href="register.html">Register here</a>
+                Already have an account? <a href="login.html">Login here</a>
             </p>
         </div>
     </main>
@@ -76,17 +87,19 @@
     <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script>
-        document.getElementById('loginForm').addEventListener('submit', async function(e) {
+        document.getElementById('registerForm').addEventListener('submit', async function(e) {
             e.preventDefault();
             
+            const name = document.getElementById('name').value;
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
+            const role = document.getElementById('role').value;
 
-            const result = await auth.login(email, password);
+            const result = await auth.register(name, email, password, role);
             
             const messageDiv = document.getElementById('message');
             if (result.success) {
-                messageDiv.innerHTML = `<div class="message success">Login successful! Redirecting...</div>`;
+                messageDiv.innerHTML = `<div class="message success">Registration successful! Redirecting...</div>`;
                 setTimeout(() => {
                     if (result.user.role === 'admin') {
                         window.location.href = 'admin/dashboard.html';
@@ -98,15 +111,6 @@
                 messageDiv.innerHTML = `<div class="message error">${result.message}</div>`;
             }
         });
-
-        // Redirect if already logged in
-        if (auth.isLoggedIn()) {
-            if (auth.isAdmin()) {
-                window.location.href = 'admin/dashboard.html';
-            } else {
-                window.location.href = 'index.html';
-            }
-        }
     </script>
 </body>
 </html>
