--- a/frontend/admin/dashboard.html
+++ b/frontend/admin/dashboard.html
@@ -7,43 +7,120 @@
     <link rel="stylesheet" href="../css/style.css">
     <style>
         .dashboard {
-            padding: 2rem 0;
+            padding: 100px 0 50px;
+            min-height: 100vh;
+            background: #f8f9fa;
         }
+
+        .admin-nav {
+            background: #2c3e50;
+            padding: 1rem 0;
+            position: fixed;
+            width: 100%;
+            top: 70px;
+            z-index: 999;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+
+        .admin-nav .container {
+            display: flex;
+            gap: 2rem;
+            align-items: center;
+        }
+
+        .admin-nav a {
+            color: white;
+            text-decoration: none;
+            padding: 0.5rem 1rem;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+
+        .admin-nav a:hover, .admin-nav a.active {
+            background: #3498db;
+        }
+
         .stats-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 1.5rem;
             margin-bottom: 2rem;
         }
+
         .stat-card {
             background: white;
             padding: 1.5rem;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
             text-align: center;
+            transition: transform 0.3s;
         }
+
+        .stat-card:hover {
+            transform: translateY(-5px);
+        }
+
         .stat-number {
             font-size: 2.5rem;
             font-weight: bold;
             color: #3498db;
             margin-bottom: 0.5rem;
         }
-        .admin-nav {
-            background: #34495e;
-            padding: 1rem 0;
+
+        .stat-label {
+            color: #666;
+            font-size: 0.9rem;
+        }
+
+        .recent-activity, .quick-actions {
+            background: white;
+            padding: 1.5rem;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
             margin-bottom: 2rem;
         }
-        .admin-nav a {
-            color: white;
-            text-decoration: none;
-            margin-right: 2rem;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            transition: background 0.3s;
+
+        .activity-item {
+            padding: 1rem;
+            border-bottom: 1px solid #eee;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
-        .admin-nav a:hover, .admin-nav a.active {
+
+        .activity-item:last-child {
+            border-bottom: none;
+        }
+
+        .activity-time {
+            color: #666;
+            font-size: 0.8rem;
+        }
+
+        .action-buttons {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 1rem;
+        }
+
+        .action-btn {
             background: #3498db;
+            color: white;
+            padding: 1rem;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: background 0.3s;
+            text-decoration: none;
+            display: block;
+            text-align: center;
         }
+
+        .action-btn:hover {
+            background: #2980b9;
+        }
+
         .logout-btn {
             background: #e74c3c;
             color: white;
@@ -51,6 +128,14 @@
             padding: 0.5rem 1rem;
             border-radius: 5px;
             cursor: pointer;
+            margin-left: auto;
+        }
+
+        .section-title {
+            margin-bottom: 1.5rem;
+            color: #2c3e50;
+            border-bottom: 2px solid #3498db;
+            padding-bottom: 0.5rem;
         }
     </style>
 </head>
@@ -71,46 +156,70 @@
         <div class="container">
             <a href="dashboard.html" class="active">Dashboard</a>
             <a href="manage-rooms.html">Manage Rooms</a>
+            <a href="manage-bookings.html">Manage Bookings</a>
             <a href="reports.html">Reports</a>
             <a href="feedbacks.html">Feedbacks</a>
         </div>
     </div>
 
     <main class="container dashboard">
-        <h2>Hotel Overview</h2>
+        <h2 class="section-title">Hotel Overview</h2>
         
         <div class="stats-grid">
             <div class="stat-card">
                 <div class="stat-number" id="totalRooms">0</div>
-                <div>Total Rooms</div>
+                <div class="stat-label">Total Rooms</div>
             </div>
             <div class="stat-card">
                 <div class="stat-number" id="occupiedRooms">0</div>
-                <div>Occupied Rooms</div>
+                <div class="stat-label">Occupied Rooms</div>
             </div>
             <div class="stat-card">
                 <div class="stat-number" id="availableRooms">0</div>
-                <div>Available Rooms</div>
+                <div class="stat-label">Available Rooms</div>
             </div>
             <div class="stat-card">
                 <div class="stat-number" id="totalRevenue">$0</div>
-                <div>Total Revenue</div>
+                <div class="stat-label">Total Revenue</div>
+            </div>
+            <div class="stat-card">
+                <div class="stat-number" id="totalBookings">0</div>
+                <div class="stat-label">Total Bookings</div>
+            </div>
+            <div class="stat-card">
+                <div class="stat-number" id="pendingBookings">0</div>
+                <div class="stat-label">Pending Bookings</div>
+            </div>
+        </div>
+
+        <div class="quick-actions">
+            <h3 class="section-title">Quick Actions</h3>
+            <div class="action-buttons">
+                <a href="manage-rooms.html" class="action-btn">➕ Add New Room</a>
+                <a href="manage-bookings.html" class="action-btn">📋 View All Bookings</a>
+                <a href="reports.html" class="action-btn">📊 Generate Reports</a>
+                <button class="action-btn" onclick="refreshDashboard()">🔄 Refresh Data</button>
             </div>
         </div>
 
         <div class="recent-activity">
-            <h3>Recent Activity</h3>
+            <h3 class="section-title">Recent Activity</h3>
             <div id="recentActivity">
-                <p>Loading recent activity...</p>
+                <div class="activity-item">
+                    <span>Loading recent activity...</span>
+                    <span class="activity-time">Just now</span>
+                </div>
             </div>
         </div>
     </main>
 
     <script src="../js/config.js"></script>
     <script src="../js/auth.js"></script>
+    <script src="../js/admin.js"></script>
     <script>
         // Check if user is admin
         if (!auth.isLoggedIn() || !auth.isAdmin()) {
+            alert('Access denied. Admin only.');
             window.location.href = '../login.html';
         }
 
@@ -118,42 +227,17 @@
         document.getElementById('adminName').textContent = auth.user.name;
 
         // Load dashboard data
-        async function loadDashboard() {
-            try {
-                // Load rooms data
-                const response = await fetch(`${API_BASE_URL}/api/rooms`, {
-                    headers: auth.getAuthHeaders()
-                });
-                const rooms = await response.json();
+        loadDashboard();
 
-                // Calculate stats
-                const totalRooms = rooms.length;
-                const occupiedRooms = rooms.filter(room => room.status === 'Occupied').length;
-                const availableRooms = rooms.filter(room => room.status === 'Vacant').length;
-                const totalRevenue = rooms.reduce((sum, room) => sum + room.price, 0);
-
-                // Update UI
-                document.getElementById('totalRooms').textContent = totalRooms;
-                document.getElementById('occupiedRooms').textContent = occupiedRooms;
-                document.getElementById('availableRooms').textContent = availableRooms;
-                document.getElementById('totalRevenue').textContent = `$${totalRevenue}`;
-
-                // Show recent activity
-                document.getElementById('recentActivity').innerHTML = `
-                    <p>✅ Dashboard loaded successfully</p>
-                    <p>📊 ${totalRooms} rooms in system</p>
-                    <p>🛏️ ${occupiedRooms} rooms currently occupied</p>
-                    <p>✅ ${availableRooms} rooms available for booking</p>
-                `;
-
-            } catch (error) {
-                document.getElementById('recentActivity').innerHTML = 
-                    `<p class="error">Error loading dashboard: ${error.message}</p>`;
-            }
+        // Refresh dashboard function
+        function refreshDashboard() {
+            document.getElementById('recentActivity').innerHTML = 
+                '<div class="activity-item"><span>Refreshing data...</span><span class="activity-time">Just now</span></div>';
+            loadDashboard();
         }
 
-        // Load dashboard when page loads
-        loadDashboard();
+        // Auto-refresh every 30 seconds
+        setInterval(loadDashboard, 30000);
     </script>
 </body>
 </html>
