--- a/frontend/rooms.html
+++ b/frontend/rooms.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Rooms - Luxury Hotel</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Crimson+Text:wght@400;600&display=swap" rel="stylesheet">
     <style>
         .rooms-page {
             padding: 100px 0 50px;
             min-height: 100vh;
-            background: #f8f9fa;
+            background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #2a2a2a 100%);
+            color: #e5e4e2;
         }
 
         .page-header {
@@ -20,15 +22,17 @@
 
         .page-header h1 {
             font-size: 3rem;
-            color: #2c3e50;
+            color: #d4af37;
             margin-bottom: 1rem;
+            font-family: 'Crimson Text', serif;
         }
 
         .page-header p {
             font-size: 1.2rem;
-            color: #666;
+            color: #b0b0b0;
             max-width: 600px;
             margin: 0 auto;
+            font-family: 'Lato', sans-serif;
         }
 
         .rooms-grid {
@@ -39,17 +43,19 @@
         }
 
         .room-card {
-            background: white;
+            background: linear-gradient(145deg, #1a1a1a, #2a2a2a);
             border-radius: 15px;
             overflow: hidden;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-            transition: all 0.3s ease;
+            border: 1px solid rgba(212,175,55,0.2);
+            box-shadow: 0 8px 32px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.1);
+            transition: all 0.4s ease;
             position: relative;
         }
 
         .room-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 15px 30px rgba(0,0,0,0.2);
+            transform: translateY(-8px) scale(1.02);
+            box-shadow: 0 15px 45px rgba(212,175,55,0.3), inset 0 1px 0 rgba(255,255,255,0.2);
+            border-color: rgba(212,175,55,0.4);
         }
 
         .room-image {
@@ -66,7 +72,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(0,0,0,0.3);
+            background: rgba(0,0,0,0.5);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -106,26 +112,29 @@
 
         .room-name {
             font-size: 1.5rem;
-            color: #2c3e50;
+            color: #d4af37;
             margin: 0;
+            font-family: 'Crimson Text', serif;
         }
 
         .room-price {
             font-size: 1.8rem;
             font-weight: bold;
-            color: #27ae60;
+            color: #d4af37;
         }
 
         .room-type {
-            color: #666;
+            color: #b0b0b0;
             font-size: 1rem;
             margin-bottom: 1rem;
+            font-family: 'Lato', sans-serif;
         }
 
         .room-description {
-            color: #666;
+            color: #b0b0b0;
             margin-bottom: 1.5rem;
             line-height: 1.6;
+            font-family: 'Lato', sans-serif;
         }
 
         .room-amenities {
@@ -136,11 +145,12 @@
         }
 
         .amenity-tag {
-            background: #3498db;
-            color: white;
+            background: linear-gradient(45deg, #d4af37, #b89529);
+            color: #111;
             padding: 0.3rem 0.8rem;
             border-radius: 15px;
             font-size: 0.8rem;
+            font-family: 'Lato', sans-serif;
         }
 
         .room-footer {
@@ -150,25 +160,28 @@
         }
 
         .room-capacity {
-            color: #666;
+            color: #b0b0b0;
             font-size: 0.9rem;
+            font-family: 'Lato', sans-serif;
         }
 
         .book-btn {
-            background: #e74c3c;
-            color: white;
+            background: linear-gradient(45deg, #d4af37, #b89529);
+            color: #111;
             padding: 0.8rem 1.5rem;
             border: none;
             border-radius: 5px;
             font-weight: bold;
             cursor: pointer;
-            transition: background 0.3s;
+            transition: all 0.3s;
             text-decoration: none;
             display: inline-block;
+            font-family: 'Lato', sans-serif;
         }
 
         .book-btn:hover {
-            background: #c0392b;
+            transform: translateY(-3px);
+            box-shadow: 0 0 20px rgba(212,175,55,0.4);
         }
 
         .book-btn:disabled {
@@ -177,10 +190,11 @@
         }
 
         .filter-section {
-            background: white;
+            background: linear-gradient(145deg, #1a1a1a, #2a2a2a);
             padding: 2rem;
             border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            border: 1px solid rgba(212,175,55,0.2);
+            box-shadow: 0 8px 32px rgba(0,0,0,0.5);
             margin-bottom: 2rem;
         }
 
@@ -198,39 +212,51 @@
         .filter-group label {
             font-weight: bold;
             margin-bottom: 0.5rem;
-            color: #2c3e50;
+            color: #d4af37;
+            font-family: 'Lato', sans-serif;
         }
 
         .filter-group select, .filter-group input {
             padding: 0.8rem;
-            border: 2px solid #e9ecef;
+            border: 2px solid rgba(212,175,55,0.3);
+            background: #111;
+            color: #e5e4e2;
             border-radius: 5px;
             font-size: 1rem;
+            font-family: 'Lato', sans-serif;
+            transition: border-color 0.3s;
+        }
+
+        .filter-group select:focus, .filter-group input:focus {
+            outline: none;
+            border-color: #d4af37;
         }
 
         .no-rooms {
             grid-column: 1 / -1;
             text-align: center;
             padding: 3rem;
-            color: #666;
+            color: #b0b0b0;
+            font-family: 'Lato', sans-serif;
         }
 
         .loading {
             grid-column: 1 / -1;
             text-align: center;
             padding: 3rem;
-            color: #666;
+            color: #b0b0b0;
+            font-family: 'Lato', sans-serif;
         }
 
         @media (max-width: 768px) {
             .rooms-grid {
                 grid-template-columns: 1fr;
             }
-            
+
             .filter-grid {
                 grid-template-columns: 1fr;
             }
-            
+
             .room-header {
                 flex-direction: column;
                 gap: 0.5rem;
