--- a/frontend/admin/dashboard.html
+++ b/frontend/admin/dashboard.html
@@ -9,17 +9,18 @@
         .dashboard {
             padding: 100px 0 50px;
             min-height: 100vh;
-            background: #f8f9fa;
+            background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #2a2a2a 100%);
+            color: #e5e4e2;
         }
 
         .admin-nav {
-            background: #2c3e50;
+            background: linear-gradient(145deg, #1a1a1a, #2a2a2a);
             padding: 1rem 0;
             position: fixed;
             width: 100%;
             top: 70px;
             z-index: 999;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            border-bottom: 1px solid rgba(212,175,55,0.2);
         }
 
         .admin-nav .container {
@@ -99,24 +100,26 @@
         }
 
         .dashboard-card {
-            background: white;
+            background: linear-gradient(145deg, #1a1a1a, #2a2a2a);
             padding: 1.5rem;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            border-radius: 15px;
+            border: 1px solid rgba(212,175,55,0.2);
+            box-shadow: 0 8px 32px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.1);
         }
 
         .section-title {
             margin-bottom: 1.5rem;
-            color: #2c3e50;
-            border-bottom: 2px solid #3498db;
+            color: #d4af37;
+            border-bottom: 2px solid #d4af37;
             padding-bottom: 0.5rem;
             display: flex;
-            justify-content: between;
+            justify-content: space-between;
             align-items: center;
         }
 
         .section-title h3 {
             margin: 0;
+            font-family: 'Crimson Text', serif;
         }
 
         .activity-item {
@@ -224,7 +227,7 @@
 
     <main class="container dashboard">
         <div class="section-title">
-            <h2>Hotel Overview</h2>
+            <h2 style="color: #d4af37; font-family: 'Crimson Text', serif;">Hotel Overview</h2>
             <button class="btn btn-primary" onclick="loadDashboard()">🔄 Refresh</button>
         </div>
         
