--- a/frontend/admin/manage-bookings.html
+++ b/frontend/admin/manage-bookings.html
@@ -6,15 +6,16 @@
     <title>Manage Bookings - Admin</title>
     <link rel="stylesheet" href="../css/style.css">
     <style>
-        .dashboard { padding: 100px 0 50px; min-height: 100vh; background: #f8f9fa; }
-        .admin-nav { background: #2c3e50; padding: 1rem 0; position: fixed; width: 100%; top: 70px; z-index: 999; }
+        .dashboard { padding: 100px 0 50px; min-height: 100vh; background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #2a2a2a 100%); color: #e5e4e2; }
+        .admin-nav { background: linear-gradient(145deg, #1a1a1a, #2a2a2a); padding: 1rem 0; position: fixed; width: 100%; top: 70px; z-index: 999; border-bottom: 1px solid rgba(212,175,55,0.2); }
         .admin-nav .container { display: flex; gap: 2rem; align-items: center; flex-wrap: wrap; }
         .admin-nav a { color: white; text-decoration: none; padding: 0.5rem 1rem; border-radius: 5px; transition: background 0.3s; }
         .admin-nav a:hover, .admin-nav a.active { background: #3498db; }
-        
-        .bookings-table { background: white; border-radius: 10px; overflow: hidden; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        .table-header { background: #34495e; color: white; padding: 1rem; display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; gap: 1rem; font-weight: bold; }
-        .table-row { padding: 1rem; display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; gap: 1rem; border-bottom: 1px solid #eee; align-items: center; }
+
+        .bookings-table { background: linear-gradient(145deg, #1a1a1a, #2a2a2a); border-radius: 15px; overflow: hidden; border: 1px solid rgba(212,175,55,0.2); box-shadow: 0 8px 32px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.1); }
+        .table-header { background: linear-gradient(145deg, #2a2a2a, #1a1a1a); color: #e5e4e2; padding: 1rem; display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; gap: 1rem; font-weight: bold; border-bottom: 1px solid rgba(212,175,55,0.2); }
+        .table-row { padding: 1rem; display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; gap: 1rem; border-bottom: 1px solid rgba(212,175,55,0.2); align-items: center; color: #e5e4e2; }
+        .table-row:hover { background: rgba(212,175,55,0.05); }
         .status-badge { padding: 0.3rem 0.8rem; border-radius: 15px; font-size: 0.8rem; font-weight: bold; }
         .status-pending { background: #fff3cd; color: #856404; }
         .status-confirmed { background: #d4edda; color: #155724; }
