--- a/frontend/register.html
+++ b/frontend/register.html
@@ -13,8 +13,8 @@
         }
 
         body {
-            background-color: #f5f7fa;
-            color: #333;
+            background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #2a2a2a 100%);
+            color: #e5e4e2;
             line-height: 1.6;
         }
 
@@ -25,10 +25,10 @@
         }
 
         .header {
-            background: linear-gradient(135deg, #1a2a6c, #2a3a7c);
-            color: white;
+            background: linear-gradient(145deg, #1a1a1a, #2a2a2a);
+            color: #e5e4e2;
             padding: 1rem 0;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            border-bottom: 1px solid rgba(212,175,55,0.2);
         }
 
         .header .container {
@@ -67,9 +67,10 @@
         }
 
         .auth-container {
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
+            background: linear-gradient(145deg, #1a1a1a, #2a2a2a);
+            border-radius: 15px;
+            border: 1px solid rgba(212,175,55,0.2);
+            box-shadow: 0 8px 32px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.1);
             padding: 2.5rem;
             width: 100%;
             max-width: 500px;
@@ -78,7 +79,8 @@
         .auth-container h2 {
             text-align: center;
             margin-bottom: 1.5rem;
-            color: #1a2a6c;
+            color: #d4af37;
+            font-family: 'Crimson Text', serif;
             font-weight: 600;
         }
 
@@ -112,12 +114,12 @@
 
         .btn {
             display: inline-block;
-            padding: 0.75rem 1.5rem;
-            background: #1a2a6c;
-            color: white;
+            padding: 15px;
+            background: #d4af37;
+            color: #1a1a1a;
             border: none;
             border-radius: 5px;
-            font-size: 1rem;
+            font-size: 1.1rem;
             font-weight: 500;
             cursor: pointer;
             transition: background 0.3s, transform 0.2s;
@@ -125,7 +127,7 @@
         }
 
         .btn:hover {
-            background: #2a3a7c;
+            background: #b8952a;
             transform: translateY(-2px);
         }
 
