--- a/frontend/admin/revenue-services.html
+++ b/frontend/admin/revenue-services.html
@@ -6,20 +6,20 @@
     <title>Revenue Services - Admin</title>
     <link rel="stylesheet" href="../css/style.css">
     <style>
-        .dashboard { padding: 100px 0 50px; min-height: 100vh; background: #f8f9fa; }
-        .admin-nav { background: #2c3e50; padding: 1rem 0; position: fixed; width: 100%; top: 70px; z-index: 999; }
+        .dashboard { padding: 150px 0 50px; min-height: 100vh; background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #2a2a2a 100%); color: #e5e4e2; }
+        .admin-nav { background: linear-gradient(145deg, #1a1a1a, #2a2a2a); padding: 1rem 0; position: fixed; width: 100%; top: 70px; z-index: 999; border-bottom: 1px solid rgba(212,175,55,0.2); }
         .admin-nav .container { display: flex; gap: 2rem; align-items: center; flex-wrap: wrap; }
         .admin-nav a { color: white; text-decoration: none; padding: 0.5rem 1rem; border-radius: 5px; transition: background 0.3s; }
         .admin-nav a:hover, .admin-nav a.active { background: #3498db; }
-        
+
         .services-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; margin-bottom: 2rem; }
-        .service-card { background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        .service-header { display: flex; justify-content: between; align-items: center; margin-bottom: 1rem; }
-        .service-revenue { font-size: 1.5rem; font-weight: bold; color: #27ae60; }
-        .progress-bar { width: 100%; background: #f0f0f0; border-radius: 10px; height: 10px; margin: 0.5rem 0; }
-        .progress-fill { height: 100%; border-radius: 10px; background: #3498db; }
-        
-        .summary-card { background: white; padding: 1.5rem; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); margin-bottom: 2rem; }
+        .service-card { background: linear-gradient(145deg, #1a1a1a, #2a2a2a); padding: 1.5rem; border-radius: 15px; border: 1px solid rgba(212,175,55,0.2); box-shadow: 0 8px 32px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.1); color: #e5e4e2; }
+        .service-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem; }
+        .service-revenue { font-size: 1.5rem; font-weight: bold; color: #e5e4e2; }
+        .progress-bar { width: 100%; background: linear-gradient(145deg, #2a2a2a, #1a1a1a); border-radius: 10px; height: 10px; margin: 0.5rem 0; border: 1px solid rgba(212,175,55,0.2); }
+        .progress-fill { height: 100%; border-radius: 10px; background: linear-gradient(90deg, #3498db, #2980b9); }
+
+        .summary-card { background: linear-gradient(145deg, #1a1a1a, #2a2a2a); padding: 1.5rem; border-radius: 15px; border: 1px solid rgba(212,175,55,0.2); box-shadow: 0 8px 32px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.1); margin-bottom: 2rem; color: #e5e4e2; }
         .summary-stats { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 1rem 0; }
     </style>
 </head>
